Fixed overlapping quote style issue

--- a/src/eradicate.css
+++ b/src/eradicate.css
@@ -10,7 +10,7 @@
 	border-left: 4px solid #99f;
 	margin-left: 15px;
 	padding-left: 15px;
-	width: 90%;
+	width: 87.5%;
 }
 
 .nfe-info-panel p
